--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <div id="nav" class="inner">
       <a class="nav-item nav-item-selected" href="index.html">Page 1</a>
-      <a class="nav-item" href="index.html">Page 2</a>
-      <a class="nav-item" href="index.html">Page 3</a>
-      <a class="nav-item" href="index.html">Page 4</a>
+      <a class="nav-item" href="page2.html">Page 2</a>
+      <a class="nav-item" href="page3.html">Page 3</a>
+      <a class="nav-item" href="page4.html">Page 4</a>
     </div>
 
     <div id="content-wrapper">
@@ -60,10 +60,6 @@ line3</pre></div>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
