--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
@@ -18,13 +18,14 @@
   <body>
     <header>
       <div class="inner">
+        <div id="logo"></div>
         <h1>Test-Test-Test-Test</h1>
         <h2></h2>
         <a href="https://github.com/jsmartt/test" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
-    <div id="nav" class="inner">
+    <div id="nav">
       <a class="nav-item" href="index.html">Page 1</a>
       <a class="nav-item" href="page2.html">Page 2</a>
       <a class="nav-item nav-item-selected" href="page3.html">Page 3</a>
@@ -37,5 +38,17 @@
           <h3>More Stuff</h3>
           
           <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        </section>
+        
+        <aside id="sidebar">
+          <a href="https://github.com/jsmartt/test/zipball/master" class="button">
+            <small>Download</small>
+            .zip file
+          </a>
+          <a href="https://github.com/jsmartt/test/tarball/master" class="button">
+            <small>Download</small>
+            .tar.gz file
+          </a>
+        </aside>
   </body>
 </html>
