updated css & buttons

--- a/page2.html
+++ b/page2.html
@@ -20,8 +20,6 @@
       <div class="inner">
         <div id="logo"></div>
         <h1>Test-Test-Test-Test</h1>
-        <h2></h2>
-        <a href="https://github.com/jsmartt/test" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -34,22 +32,22 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
+        <aside id="sidebar">
+          <a href="https://github.com/jsmartt/test" class="button">
+            <small>View projet on</small>
+            GitHub
+          </a>
+        </aside>
+
         <section id="main-content">
+          <h1>Stuff</h1>
+          <h2>Stuff</h2>
           <h3>Stuff</h3>
+          <h4>Stuff</h4>
+          <h5>Stuff</h5>
 
           <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
         </section>
-
-        <aside id="sidebar">
-          <a href="https://github.com/jsmartt/test/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/jsmartt/test/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
-        </aside>
       </div>
     </div>
 
