--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
       <div class="inner">
         <div id="logo"></div>
         <h1>Test-Test-Test-Test</h1>
-        <h2></h2>
-        <a href="https://github.com/jsmartt/test" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -34,6 +32,13 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
+        <aside id="sidebar">
+          <a href="https://github.com/jsmartt/test" class="button">
+            <small>View projet on</small>
+            GitHub
+          </a>
+        </aside>
+        
         <section id="main-content">
           <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -58,17 +63,6 @@
           <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
         </section>
-
-        <aside id="sidebar">
-          <a href="https://github.com/jsmartt/test/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/jsmartt/test/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
-        </aside>
       </div>
     </div>
 
