--- a/page4.html
+++ b/page4.html
@@ -20,8 +20,6 @@
       <div class="inner">
         <div id="logo"></div>
         <h1>Test-Test-Test-Test</h1>
-        <h2></h2>
-        <a href="https://github.com/jsmartt/test" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -34,21 +32,20 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
-          <h3>Even More Stuff</h3>
-          
-          <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-        </section>
-        
         <aside id="sidebar">
-          <a href="https://github.com/jsmartt/test/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/jsmartt/test/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
+          <a href="https://github.com/jsmartt/test" class="button">
+            <small>View projet on</small>
+            GitHub
           </a>
         </aside>
+
+        <section id="main-content">
+          <h3>Even More Stuff</h3>
+
+          <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        </section>
+      </div>
+    </div>
+
   </body>
 </html>
